syntax = "proto3";

package influencer;

import "com/trufflear/search/influencer/influencer_profile.proto";

option java_multiple_files = true;
option java_package = "com.trufflear.search.influencer";
option java_outer_classname = "InfluencerAccountServiceProtos";

service InfluencerAccountService {
  rpc Signup(SignupRequest) returns (SignupResponse);
  rpc UpdateUsername(UpdateUsernameRequest) returns (UpdateUsernameResponse);
  rpc UpdateBioDescription(UpdateBioDescriptionRequest) returns (UpdateBioDescriptionResponse);
  rpc GetAccountInfo(GetAccountInfoRequest) returns (GetAccountInfoResponse);
}

message SignupRequest {}

message SignupResponse {}

message UpdateUsernameRequest {
  string username = 1;
}

message UpdateUsernameResponse {}

message UpdateBioDescriptionRequest {
  string bio_description = 1;
}

message UpdateBioDescriptionResponse {}

message GetAccountInfoRequest {}

message GetAccountInfoResponse {
  InfluencerProfile influencer_profile = 1;
}