syntax = "proto3";

package influencer;

import "com/trufflear/search/influencer/influencer_profile.proto";

option java_multiple_files = true;
option java_package = "com.trufflear.search.influencer";
option java_outer_classname = "GetInfluencerPublicProfileProtos";

// This service shows the Influencer's profile information
service InfluencerPublicProfileService {
  rpc GetInfluencerPublicProfile(GetInfluencerPublicProfileRequest) returns (GetInfluencerPublicProfileResponse);

}

message GetInfluencerPublicProfileRequest {
  // username of the influencer
  string username = 1;
}

message GetInfluencerPublicProfileResponse {
    // Describes the response state. Can be either success or error.
    oneof state {
      Success success = 1;
      Error error = 2;
    }

    message Success {
      // profile information of the influencer
      InfluencerProfile profile = 1;
    }

    message Error {
      ErrorType error_type = 1;

      enum ErrorType {
        UNKNOWN = 0;
        // The influencer's profile is disabled
        PROFILE_DOES_NOT_EXIST = 1;
        PROFILE_NOT_LIVE = 2;
      }
    }
}

